# MiscellaneousProjects

./: CMakeLists.txt
Controllers/: MovieController.cpp  MovieController.h  UserController.cpp  UserController.h
Data/: movies.txt  temp.txt  userRent.txt
Models/: Movie.cpp  Movie.h  User.cpp  User.h  UserRent.cpp  UserRent.h
Services/: FileService.cpp  FileService.h
Views/: main.cpp
